@@ -1,12 +1,29 @@
 require 'cgi'
 require 'uri'
 
+##
+# The UriFormatter handles URIs from user-input and escaping.
+#
+#   uf = Gem::UriFormatter.new 'example.com'
+#
+#   p uf.normalize #=> 'http://example.com'
+
 class Gem::UriFormatter
+
+  ##
+  # The URI to be formatted.
+
   attr_reader :uri
+
+  ##
+  # Creates a new URI formatter for +uri+.
 
   def initialize uri
     @uri = uri
   end
+
+  ##
+  # Escapes the #uri for use as a CGI parameter
 
   def escape
     return unless @uri
@@ -19,6 +36,9 @@ class Gem::UriFormatter
   def normalize
     (@uri =~ /^(https?|ftp|file):/i) ? @uri : "http://#{@uri}"
   end
+
+  ##
+  # Unescapes the #uri which came from a CGI parameter
 
   def unescape
     return unless @uri
